Bug 1804699: Assign date fields an AXGroup role, spoof actual role via AXTitle r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D172177